Major improvement to defining Requests, routes, imports in usecase handlers, auto generated client (experimental). Cleanups. Updated to latest Schema, removing 1 type param and no more need for S.builder.
